Corrected small glitch whereby the overflow on home page was applied to all other pages

--- a/builds/development/css/style.css
+++ b/builds/development/css/style.css
@@ -65,8 +65,7 @@ img {
   display: block; }
 
 body {
-  background-color: #171717;
-  overflow-y: hidden; }
+  background-color: #171717; }
 
 #myTopnav {
   text-align: center;
@@ -123,7 +122,7 @@ body {
 
 .headerwrapper {
   width: 100%;
-  margin: 2% 0 0 0;
+  padding: 2% 0 0 0;
   height: 15%; }
   .headerwrapper h1 {
     text-align: center;
@@ -361,8 +360,8 @@ body.modal-open {
             height: 100%; } }
 
 #footerwrapper {
-  margin: 1.5% 0 1% 0;
-  height: 10%; }
+  margin: 1.5% 0 0 0;
+  height: 9%; }
   #footerwrapper #socialcontainer {
     font-size: 0;
     margin: 0 45%; }
@@ -377,7 +376,7 @@ body.modal-open {
     color: #c9c9c9;
     text-align: center;
     font-size: 0.7em;
-    margin: 1.5% 0 1% 0; }
+    margin: 1.5% 0 0 0; }
 
 #imgPanel {
   position: fixed;
