--- a/components/sass/_footer.scss
+++ b/components/sass/_footer.scss
@@ -19,8 +19,8 @@
         color: $lightgrey;
         text-align: center;
         font-size: 0.7em;
-        margin: 1.5% 0 1% 0;
+        margin: 1.5% 0 0 0;
     }
-    margin: 1.5% 0 1% 0;
-    height: 10%;
+    margin: 1.5% 0 0 0;
+    height: 9%;
 }
