--- a/components/sass/_header.scss
+++ b/components/sass/_header.scss
@@ -79,6 +79,6 @@
         font-size: 0.9em;
     }
     width: 100%;
-    margin: 2% 0 0 0;
+    padding: 2% 0 0 0;
     height: 15%;
 }
