--- a/components/sass/_main.scss
+++ b/components/sass/_main.scss
@@ -4,5 +4,4 @@
 
 body {
     background-color: $darkgrey;
-    overflow-y: hidden;
 }
